cleaned up drawer

--- a/src/card_interactions/templates/comment.html
+++ b/src/card_interactions/templates/comment.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div id="comments" class="flow-root p-4">
+<div id="comments" class="flow-root">
     {% for comment in comments %}
     <ul role="list" class="divide-y divide-gray-200 ">
         <li class="py-3 sm:py-4">
