--- a/src/card_interactions/templates/resources.html
+++ b/src/card_interactions/templates/resources.html
@@ -1,5 +1,5 @@
 
-<div id="resources" class="p-4 flow-root">
+<div id="resources" class=" flow-root">
     <ul role="list" class="divide-y divide-gray-200 ">
         {% for resource in resources %}
             <li class="py-3 sm:py-4">
@@ -16,8 +16,7 @@
                         </p>
                         <p class="text-sm text-gray-500 truncate ">
                             <a href="{{resource.document_url}}" target="popup"> {{resource.document_url|truncatechars:50 }} </a>
-                        </p>
-                       
+                        </p> 
                     </div>
                 </a>
                     {% if resource.owner == request.user %}
@@ -43,7 +42,7 @@
     </ul>
     {% if user.is_authenticated %}
     <div id="addresource">
-    <button hx-get="/card/{{ id }}/resource/create" hx-trigger="click" hx-target="#addresource" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">add  resource</button>
+    <button hx-get="/card/{{ id }}/resource/create" hx-trigger="click" hx-target="#addresource" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-4 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">add  resource</button>
     {% endif %}
     </div>
 </div>
