--- a/src/card_interactions/templates/typecomment.html
+++ b/src/card_interactions/templates/typecomment.html
@@ -2,7 +2,7 @@
 {% include 'comment.html' with comments=comments id=id %}
 {% if user.is_authenticated %}
 <form>
-    <div class="w-full m-4 border border-gray-200 rounded-lg bg-gray-50  ">
+    <div class="w-full border border-gray-200 rounded-lg bg-gray-50  ">
         <div class="p-2 bg-white rounded-t-lg ">
             {% csrf_token %}
             {{ form }}       
