Card colors from workshopmodel

--- a/src/dashboard/templates/adjust_zoom.html
+++ b/src/dashboard/templates/adjust_zoom.html
@@ -1,9 +1,9 @@
 <div id="zoom">
     {% if zoomlevel == '0' %}
-        {% include 'grid_zoom_standard.html' with cards=cards %}
+        {% include 'grid_zoom_standard.html' with workshop=workshop cards=cards %}
     {% elif zoomlevel == '1' %}
-        {% include 'grid_zoom_out.html' with cards=cards %}
+        {% include 'grid_zoom_out.html' with cards=cards workshop=workshop %}
     {% elif zoomlevel == '2' %}
-        {% include 'grid_zoom_in.html' with cards=cards %}
+        {% include 'grid_zoom_in.html' with cards=cards workshop=workshop %}
     {% endif %}
 </div>
