--- a/src/dashboard/templates/grid_zoom_in.html
+++ b/src/dashboard/templates/grid_zoom_in.html
@@ -93,7 +93,7 @@
                 <b>Create new card</b>       
             </div>
         {% elif card.cardtype == 'legend_1' %}
-            <div class="hexagon flex items-center" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #000000; color: #fff"><input type='hidden' name='item' value='{{ card.id}}'/>            
+            <div class="hexagon flex items-center" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #{{workshop.legend_hex_color_1}}; color: #fff"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <img style="filter: invert(100%)  brightness(119%) contrast(119%);" src="{% static '/icons/flag-solid.svg' %}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 {{card.cardtype}}<br>
                 <b>{{ card.title|truncatechars:20}}</b>
@@ -101,7 +101,7 @@
                 <br>{{ card.author.first_name}}  {{ card.author.last_name}} 
             </div>
         {% elif card.cardtype == 'legend_2' %}
-            <div class="hexagon flex items-center"  hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #E6799D;"><input type='hidden' name='item' value='{{ card.id}}'/>            
+            <div class="hexagon flex items-center"  hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #{{workshop.legend_hex_color_2}};"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <img src="{% static '/icons/thumbs-up-solid.svg' %}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 {{card.cardtype}}<br>
                 <b>{{ card.title|truncatechars:20}}</b>
@@ -109,7 +109,7 @@
                 <br>{{ card.author.first_name}}  {{ card.author.last_name}} 
             </div>
         {% elif card.cardtype == 'legend_3' %}
-            <div class="hexagon flex items-center"  hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #51c1ff;"><input type='hidden' name='item' value='{{ card.id}}'/>            
+            <div class="hexagon flex items-center"  hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #{{workshop.legend_hex_color_3}};"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <img src="{% static '/icons/lightbulb-solid.svg' %}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 {{card.cardtype}}<br>
                 <b>{{ card.title|truncatechars:20}}</b>
@@ -117,7 +117,7 @@
                 <br>{{ card.author.first_name}}  {{ card.author.last_name}} 
             </div>
         {% elif card.cardtype == 'legend_4' %}
-            <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #ffeb39;"><input type='hidden' name='item' value='{{ card.id}}'/>            
+            <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #{{workshop.legend_hex_color_4}};"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <img src="{% static '/icons/thumbs-up-solid.svg' %}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 {{card.cardtype}}<br>
                 <b>{{ card.title|truncatechars:20}}</b>
@@ -125,7 +125,7 @@
                 <br>{{ card.author.first_name}}  {{ card.author.last_name}} 
             </div>
             {% elif card.cardtype == 'legend_5' %}
-            <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #78E7BF;"><input type='hidden' name='item' value='{{ card.id}}'/>            
+            <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #{{workshop.legend_hex_color_5}};"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <img src="{% static '/icons/thumbs-down-solid.svg' %}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 {{card.cardtype}}<br>
                 <b>{{ card.title|truncatechars:20}}</b>
@@ -134,6 +134,10 @@
                 <br>{{ card.author.first_name}}  {{ card.author.last_name}} 
                 </div>
             </div>
+            {% elif card.cardtype == 'image_card' %}
+                <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background-image: url('https://static01.nyt.com/images/2020/12/14/well/14google-photo/14google-photo-videoSixteenByNineJumbo1600.jpg'); background-size: cover; background-position: center;"><input type='hidden' name='item' value='{{ card.id}}'/>            
+
+                </div>
         {% endif %}
         {% endfor %}
         </form>
