image form connected to dbfield

--- a/src/card_interactions/templates/drawer.html
+++ b/src/card_interactions/templates/drawer.html
@@ -24,7 +24,7 @@
         {% endif %}
     </div>
     
-        {% include "new_title.html" with author=author %}
+        {% include "new_title.html" with author=author workshop=workshop card_image=card_image%}
  
         <div class=" bg-grey-100 my-3">
             <div class="bg-grey-100">
