--- a/src/dashboard/templates/grid_zoom_in.html
+++ b/src/dashboard/templates/grid_zoom_in.html
@@ -95,7 +95,7 @@
         {% elif card.cardtype == 'legend_1' %}
             <div class="hexagon flex items-center" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #{{workshop.legend_hex_color_1}}; color: #fff"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <img style="filter: invert(100%)  brightness(119%) contrast(119%);" src="{% static '/icons/flag-solid.svg' %}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
-                {{card.cardtype}}<br>
+                {{workshop.legend_label_1}}<br>
                 <b>{{ card.title|truncatechars:20}}</b>
                 <img class="w-10 h-10 rounded-full avatar" src="{{card.author.avatar_url}}">
                 <br>{{ card.author.first_name}}  {{ card.author.last_name}} 
@@ -103,7 +103,7 @@
         {% elif card.cardtype == 'legend_2' %}
             <div class="hexagon flex items-center"  hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #{{workshop.legend_hex_color_2}};"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <img src="{% static '/icons/thumbs-up-solid.svg' %}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
-                {{card.cardtype}}<br>
+                {{workshop.legend_label_2}}<br>
                 <b>{{ card.title|truncatechars:20}}</b>
                 <img class="w-10 h-10 rounded-full avatar" src="{{card.author.avatar_url}}">
                 <br>{{ card.author.first_name}}  {{ card.author.last_name}} 
@@ -111,7 +111,7 @@
         {% elif card.cardtype == 'legend_3' %}
             <div class="hexagon flex items-center"  hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #{{workshop.legend_hex_color_3}};"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <img src="{% static '/icons/lightbulb-solid.svg' %}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
-                {{card.cardtype}}<br>
+                {{workshop.legend_label_3}}<br>
                 <b>{{ card.title|truncatechars:20}}</b>
                 <img class="w-10 h-10 rounded-full avatar" src="{{card.author.avatar_url}}">
                 <br>{{ card.author.first_name}}  {{ card.author.last_name}} 
@@ -119,7 +119,7 @@
         {% elif card.cardtype == 'legend_4' %}
             <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #{{workshop.legend_hex_color_4}};"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <img src="{% static '/icons/thumbs-up-solid.svg' %}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
-                {{card.cardtype}}<br>
+                {{workshop.legend_label_4}}<br>
                 <b>{{ card.title|truncatechars:20}}</b>
                 <img class="w-10 h-10 rounded-full avatar" src="{{card.author.avatar_url}}">
                 <br>{{ card.author.first_name}}  {{ card.author.last_name}} 
@@ -127,7 +127,7 @@
             {% elif card.cardtype == 'legend_5' %}
             <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background: #{{workshop.legend_hex_color_5}};"><input type='hidden' name='item' value='{{ card.id}}'/>            
                 <img src="{% static '/icons/thumbs-down-solid.svg' %}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
-                {{card.cardtype}}<br>
+                {{workshop.legend_label_5}}<br>
                 <b>{{ card.title|truncatechars:20}}</b>
                 <div class="flex">
                 <img class="w-10 h-10 rounded-full avatar" style="position: center;" src="{{card.author.avatar_url}}">
@@ -135,7 +135,7 @@
                 </div>
             </div>
             {% elif card.cardtype == 'image_card' %}
-                <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background-image: url('https://static01.nyt.com/images/2020/12/14/well/14google-photo/14google-photo-videoSixteenByNineJumbo1600.jpg'); background-size: cover; background-position: center;"><input type='hidden' name='item' value='{{ card.id}}'/>            
+                <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background-image: url('{{card.image_Url}}'); background-size: cover; background-position: center;"><input type='hidden' name='item' value='{{ card.id}}'/>            
 
                 </div>
         {% endif %}
