--- a/src/dashboard/templates/grid_zoom_out.html
+++ b/src/dashboard/templates/grid_zoom_out.html
@@ -107,7 +107,7 @@
                 {{ card.title|truncatechars:1}}
             </div>
             {% elif card.cardtype == 'image_card' %}
-            <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background-image: url('https://static01.nyt.com/images/2020/12/14/well/14google-photo/14google-photo-videoSixteenByNineJumbo1600.jpg'); background-size: cover; background-position: center;"><input type='hidden' name='item' value='{{ card.id}}'/>            
+            <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background-image: url('{{card.image_Url}}'); background-size: cover; background-position: center;"><input type='hidden' name='item' value='{{ card.id}}'/>            
 
             </div>
         {% endif %}
