--- a/src/card_interactions/templates/new_title.html
+++ b/src/card_interactions/templates/new_title.html
@@ -11,44 +11,44 @@
 <div>
 {% endif %}
     {% if type == 'legend_1' %}
-    <div style="background: #000000; cursor: pointer; color: #fff" class="w-full my-4  p-6 max-w bg-white border border-gray-200 rounded-lg shadow  ">
+    <div style="background: #{{workshop.legend_hex_color_1}}; cursor: pointer; color: #fff" class="w-full my-4  p-6 max-w bg-white border border-gray-200 rounded-lg shadow  ">
     <div class="flex flex-col align-text-top items-center m-8">
         <img style="filter: invert(100%)  brightness(119%) contrast(119%); height: 100px; width: 100px;" src="{% static '/icons/flag-solid.svg' %}" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
-        <h5 class="mb-2 text-2xl font-bold tracking-tight text-white ">{{type}}</h5>
+        <h5 class="mb-2 text-2xl font-bold tracking-tight text-white ">{{workshop.legend_label_1}}</h5>
         <h1  class="mb-2 text-4xl font-bold tracking-tight text-white ">{{ title }}</h1>
     </div>
     </div>
 {% elif type == 'legend_2' %}
-        <div style="background: #E6799D; cursor: pointer;"  class="w-full max-w my-4  p-6 bg-white border border-gray-200 rounded-lg shadow  ">
+        <div style="background: #{{workshop.legend_hex_color_2}}; cursor: pointer;"  class="w-full max-w my-4  p-6 bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
                 <img src="{% static '/icons/mountain-solid.svg' %}" style="height: 100px; width: 100px;" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
-                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{type}}</h5>
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{workshop.legend_label_2}}</h5>
                 <h1  class="mb-2 text-4xl font-bold tracking-tight text-gray-900 ">{{ title }}</h1>
             </div>    
         </div>
         
 {% elif type == 'legend_3' %}
-        <div style="background: #51c1ff; cursor: pointer;"  class="w-full max-w my-4   p-6 bg-white border border-gray-200 rounded-lg shadow  ">
+        <div style="background: #{{workshop.legend_hex_color_3}}; cursor: pointer;"  class="w-full max-w my-4   p-6 bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
                 <img src="{% static '/icons/lightbulb-solid.svg' %}" style="height: 100px; width: 100px;" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
-                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{type}}</h5>
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{workshop.legend_label_3}}</h5>
                 <h1  class="mb-2 text-4xl font-bold tracking-tight text-gray-900 ">{{ title }}</h1>
             </div>
             </div>
 {% elif type == 'legend_4' %}
-        <div style="background: #ffeb39; cursor: pointer;" class="w-full max-w my-4  bg-white p-6 border border-gray-200 rounded-lg shadow  ">
+        <div style="background: #{{workshop.legend_hex_color_4}}; cursor: pointer;" class="w-full max-w my-4  bg-white p-6 border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
                 <img src="{% static '/icons/thumbs-up-solid.svg' %}" style="height: 100px; width: 100px;" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
-                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{type}}</h5>
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{workshop.legend_label_4}}</h5>
                 <h1 style=".grab {cursor: grab;}" class="mb-2 text-4xl font-bold tracking-tight text-gray-900 ">{{ title }}</h1>
                 
             </div>
             </div>
 {% elif type == 'legend_5' %}          
-        <div style="background: #78E7BF; cursor: pointer;" class="w-full max-w my-4  bg-white p-6 border border-gray-200 rounded-lg shadow  ">
+        <div style="background: #{{workshop.legend_hex_color_5}}; cursor: pointer;" class="w-full max-w my-4  bg-white p-6 border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
                 <img src="{% static '/icons/thumbs-down-solid.svg' %}" style="height: 100px; width: 100px;" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
-                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{type}}</h5>
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{workshop.legend_label_5}}</h5>
                 <h1  class="mb-2 text-4xl font-bold tracking-tight text-gray-900 ">{{ title }}</h1>
             </div>
             </div>
@@ -63,7 +63,7 @@
 {% elif type == 'image_card' %}          
 <div cursor: pointer;" class="w-full my-4 max-w bg-white border border-gray-200 rounded-lg shadow  ">
     <div class="flex flex-col align-text-top items-center m-8">
-        <img class="h-auto max-w-full" src="https://static01.nyt.com/images/2020/12/14/well/14google-photo/14google-photo-videoSixteenByNineJumbo1600.jpg" alt="image description">
+        <img class="h-auto max-w-full" src="{{card_image}}" alt="image description">
 
     </div>
     </div>    
