legend with correct colors

--- a/src/card_interactions/templates/edit_title.html
+++ b/src/card_interactions/templates/edit_title.html
@@ -5,7 +5,7 @@
     {% if type == 'legend_1' %}
     <div style="background: #{{workshop.legend_hex_color_1}}; color: #fff" class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
     <div class="flex flex-col align-text-top items-center m-8">
-        <img src="{% static '/icons/flag-solid.svg' %}" class=" h-4 w-4 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
+        <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_1}}" class=" h-4 w-4 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
         <h5 class="mb-2 text-2xl font-bold tracking-tight text-white ">{{workshop.legend_label_1}}</h5>
         {% csrf_token %}
         <div class="text-black">
@@ -17,7 +17,7 @@
 {% elif type == 'legend_2' %}
         <div style="background: #{{workshop.legend_hex_color_2}};"  class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
-                <i class="fa-solid fa-2xl fa-mountain"></i><br>
+                <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_2}}" class=" h-4 w-4 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{workshop.legend_label_2}}</h5>
                 {% csrf_token %}
                 {{ form }}
@@ -28,7 +28,7 @@
 {% elif type == 'legend_3' %}
         <div style="background: #{{workshop.legend_hex_color_3}};"  class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
-                <i class="fa-solid fa-2xl fa-eye"></i><br>
+                <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_3}}" class=" h-4 w-4 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{workshop.legend_label_3}}</h5>
                 {% csrf_token %}
                 {{ form }}
@@ -38,7 +38,7 @@
 {% elif type == 'legend_4' %}
         <div style="background: #{{workshop.legend_hex_color_4}}; " class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
-                <i class="fa-solid fa-circle-up fa-2xl"></i><br>
+                <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_4}}" class=" h-4 w-4 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{workshop.legend_label_4}}</h5>
                 {% csrf_token %}
                 {{ form }}
@@ -49,7 +49,7 @@
 {% elif type == 'legend_5' %}          
         <div style="background: #{{workshop.legend_hex_color_5}};" class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
             <div class="flex flex-col align-text-top items-center m-8">
-                <i class="fa-solid fa-circle-down fa-2xl"></i><br>
+                <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_5}}" class=" h-4 w-4 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{workshop.legend_label_5}}</h5>
                 {% csrf_token %}
                 {{ form }}
