--- a/src/dashboard/templates/legend.html
+++ b/src/dashboard/templates/legend.html
@@ -1,38 +1,64 @@
+<style>
+    .legendhex {
+        width: 200px;
+        margin:0 5px;
+        text-align: center;
+        justify-content: center;
+        vertical-align: middle;
+}
 
-
+.legendhex::before {
+  content: "";
+  display: block;
+  background:currentColor;
+  padding-top: 115%; /* 100%/cos(30)  */
+  clip-path: polygon(0% 25%,0% 75%,50% 100%,100% 75%,100% 25%,50% 0%);
+}
+.legendhex img {
+    display: block;
+    margin: auto;
+}
+</style>
     <div class="visible sm:invisible" style="position:absolute; top:15%; left: 25px; position: fixed;">
         <div class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow  ">
             <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">Legenda</h5>
+
             <ul>
                 <span class="flex items-center">
-                    <svg style='scale:0.5;' fill="#{{workshop.legend_hex_color_1}}" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="64px" height="64px" viewBox="-165.13 -165.13 815.95 815.95" xml:space="preserve" stroke="#{{workshop.legend.legend_hex_color_1}}" stroke-width="48.568799999999996"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#ffeb39" stroke-width="1.942752"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M364.269,453.155H121.416L0,242.844L121.416,32.533h242.853l121.419,210.312L364.269,453.155z M131.905,434.997h221.878 l110.939-192.152L353.783,50.691H131.905L20.966,242.844L131.905,434.997z"></path> </g> </g> </g></svg>
+                    <div class="legendhex items-center" style="color:#{{workshop.legend_hex_color_1}}; width: 20px;;">
+                    </div>
                     <h5>{{workshop.legend_label_1}}</h5>
                 </span>
             </ul>
             <ul>
                 <span class="flex items-center">
-                    <svg style='scale:0.5;' fill="#{{workshop.legend_hex_color_2}}" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="64px" height="64px" viewBox="-165.13 -165.13 815.95 815.95" xml:space="preserve" stroke="#{{workshop.legend.legend_hex_color_2}}" stroke-width="48.568799999999996"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#{{workshop.legend.legend_hex_color_2}}" stroke-width="1.942752"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M364.269,453.155H121.416L0,242.844L121.416,32.533h242.853l121.419,210.312L364.269,453.155z M131.905,434.997h221.878 l110.939-192.152L353.783,50.691H131.905L20.966,242.844L131.905,434.997z"></path> </g> </g> </g></svg>
+                    <div class="legendhex items-center" style="color:#{{workshop.legend_hex_color_2}}; width: 20px;;">
+                    </div>
                     <h5>{{workshop.legend_label_2}}</h5>
                 </span>
             </ul>
             <ul>
                 <span class="flex items-center">
-                    <svg style='scale:0.5;' fill="#{{workshop.legend_hex_color_3}}" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="64px" height="64px" viewBox="-165.13 -165.13 815.95 815.95" xml:space="preserve" stroke="#{{workshop.legend.legend_hex_color_3}}" stroke-width="48.568799999999996"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#{{workshop.legend.legend_hex_color_3}}" stroke-width="1.942752"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M364.269,453.155H121.416L0,242.844L121.416,32.533h242.853l121.419,210.312L364.269,453.155z M131.905,434.997h221.878 l110.939-192.152L353.783,50.691H131.905L20.966,242.844L131.905,434.997z"></path> </g> </g> </g></svg>
+                    <div class="legendhex items-center" style="color:#{{workshop.legend_hex_color_3}}; width: 20px;;">
+                    </div>
                     <h5>{{workshop.legend_label_3}}</h5>
                 </span>
             </ul>
             <ul>
                 <span class="flex items-center">
-                    <svg style='scale:0.5;' fill="#{{workshop.legend_hex_color_4}}" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="64px" height="64px" viewBox="-165.13 -165.13 815.95 815.95" xml:space="preserve" stroke="#{{workshop.legend.legend_hex_color_4}}" stroke-width="48.568799999999996"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#{{workshop.legend.legend_hex_color_4}}" stroke-width="1.942752"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M364.269,453.155H121.416L0,242.844L121.416,32.533h242.853l121.419,210.312L364.269,453.155z M131.905,434.997h221.878 l110.939-192.152L353.783,50.691H131.905L20.966,242.844L131.905,434.997z"></path> </g> </g> </g></svg>
+                    <div class="legendhex items-center" style="color:#{{workshop.legend_hex_color_4}}; width: 20px;;">
+                    </div>
                     <h5>{{workshop.legend_label_4}}</h5>
                 </span>
             </ul>
             <ul>
                 <span class="flex items-center">
-                    <svg style='scale:0.5;' fill="#{{workshop.legend_hex_color_5}}" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="64px" height="64px" viewBox="-165.13 -165.13 815.95 815.95" xml:space="preserve" stroke="{{workshop.legend.legend_hex_color_5}}" stroke-width="48.568799999999996"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#{{workshop.legend.legend_hex_color_5}}" stroke-width="1.942752"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M364.269,453.155H121.416L0,242.844L121.416,32.533h242.853l121.419,210.312L364.269,453.155z M131.905,434.997h221.878 l110.939-192.152L353.783,50.691H131.905L20.966,242.844L131.905,434.997z"></path> </g> </g> </g></svg>
+                    <div class="legendhex items-center" style="color:#{{workshop.legend_hex_color_5}}; width: 20px;;">
+                    </div>
                     <h5>{{workshop.legend_label_5}}</h5>
                 </span>
             </ul>
+            
             {% if user.is_authenticated%}
             <h5 class="mb-2 text-xl font-bold tracking-tight text-gray-900 ">Zoom </h5> 
             <div class="flex">
