added ms clarity

--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -49,6 +49,13 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
 	<link rel="preload" href="{% static '/css/dist/styles.css' %}" as="style">
 	<link rel="stylesheet" href="{% static '/css/dist/styles.css' %}">
+	<script type="text/javascript">
+		(function(c,l,a,r,i,t,y){
+			c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+			t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+			y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+		})(window, document, "clarity", "script", "gpgohh9dep");
+	</script>
 
 </head>
 <script src="https://code.jquery.com/jquery-3.6.4.slim.min.js" integrity="sha256-a2yjHM4jnF9f54xUQakjZGaqYs/V1CYvWpoqZzC2/Bw=" crossorigin="anonymous"></script>
