added    avatar.url to userprofile

--- a/src/card_interactions/templates/comment.html
+++ b/src/card_interactions/templates/comment.html
@@ -6,7 +6,7 @@
         <li class="py-3 sm:py-4">
             <div class="flex items-center space-x-4">
                 <div class="flex-shrink-0">
-                    <img class="w-8 h-8 rounded-full" src=" {{comment.author.avatar_url}}" alt="Author profile image">
+                    <img class="w-8 h-8 rounded-full" src=" {{comment.author.avatar.url}}" alt="Author profile image">
                 </div>
                 <div class="flex-1 min-w-0">
                     <p class="text-sm font-semibold  text-gray-900 truncate ">
