--- a/src/card_interactions/templates/drawer.html
+++ b/src/card_interactions/templates/drawer.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="items-center  sm:flex">
                         <a href="#">
-                            <img class="w-full p-6 rounded-lg sm:rounded-none sm:rounded-l-lg" src="{{author.avatar_url}}" alt="{{author.first_name}} Avatar">
+                            <img class="w-full p-6 rounded-lg sm:rounded-none sm:rounded-l-lg" src="{{author.avatar.url}}" alt="{{author.first_name}} Avatar">
                         </a>
                         <div class="p-5">
                             <h3 class="text-xl font-bold tracking-tight text-gray-900 ">
@@ -74,7 +74,7 @@
                         {{follower.first_name}}
                         <div class="tooltip-arrow" data-popper-arrow></div>
                     </div>
-                    <img data-tooltip-target="tooltip-{{follower.first_name}}-{{follower.id}}" class="w-10 h-10 rounded" src="{{follower.avatar_url}}" alt="Medium avatar">
+                    <img data-tooltip-target="tooltip-{{follower.first_name}}-{{follower.id}}" class="w-10 h-10 rounded" src="{{follower.avatar.url}}" alt="Medium avatar">
                     </div>
                     {% empty %}
                     <p class="ml-auto text-xs p-4 m-4 text-gray-500 ">No followers yet, be the first!</p>
