--- a/src/workshop/templates/workshop_participants.html
+++ b/src/workshop/templates/workshop_participants.html
@@ -35,7 +35,7 @@
             <tr class="bg-white border-b   hover:bg-gray-50 dark:hover:bg-gray-600">
 
                 <th scope="row" class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap ">
-                    <img class="w-10 h-10 rounded-full" src="{{participant.avatar_url}}" alt="Jese image">
+                    <img class="w-10 h-10 rounded-full" src="{{participant.avatar.url}}" alt="Jese image">
                     <div class="pl-3">
                         <div class="text-base font-semibold">{{participant.first_name }} {{ participant.last_name}}</div>
                         <div class="font-normal text-gray-500">{{ participant.email}} - {{participant.linkedin}}</div>
