--- a/src/card_interactions/templates/new_title.html
+++ b/src/card_interactions/templates/new_title.html
@@ -63,7 +63,7 @@
 {% elif type == 'image_card' %}          
 <div cursor: pointer;" class="w-full my-4 max-w bg-white border border-gray-200 rounded-lg shadow  ">
     <div class="flex flex-col align-text-top items-center m-8">
-        <img class="h-auto max-w-full" src="{{card_image}}" alt="image description">
+        <img class="h-auto max-w-full" src="{{card_url}}" alt="image description">
 
     </div>
     </div>    
